# obs-virtual-cam

./: CMakeLists.txt  readme.MD
src/queue/: share_queue.cpp  share_queue.h
src/virtual-output/: CMakeLists.txt  media_consumer.cpp  media_consumer.h  virtual_output.cpp
